[package]
name = "vello-gpu-issue"
version = "0.1.0"
edition = "2021"

[lib]
name = "vellowasm"
crate-type = ["cdylib", "lib"]

[dependencies]
log = "0.4.27"

vello = "0.4.1"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCollection", "Text"] }
web-time = "1.1.0"
winit = "0.30.9"
